Colaboratory を使用して作成しました

--- a/RSNA_Pytorch.ipynb
+++ b/RSNA_Pytorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled24.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMoWu5gFd7966cXLNtuGQmJ",
+      "authorship_tag": "ABX9TyMWpCE9ijPEkYL+PGxIAEDH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -784,6 +784,7 @@
         "import cv2\n",
         "import copy\n",
         "import time\n",
+        "import math\n",
         "import random\n",
         "import string\n",
         "import joblib\n",
@@ -817,26 +818,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18f4dbd7-f508-4141-b08d-d0b063e75acd"
+        "outputId": "35663800-c6df-4837-86a6-51172965f0b3"
       },
-      "execution_count": 1,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting path\n",
-            "  Downloading path-16.4.0-py3-none-any.whl (26 kB)\n",
-            "Installing collected packages: path\n",
-            "Successfully installed path-16.4.0\n",
+            "Requirement already satisfied: path in /usr/local/lib/python3.7/dist-packages (16.4.0)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting pydicom\n",
-            "  Downloading pydicom-2.3.0-py3-none-any.whl (2.0 MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.0 MB 7.9 MB/s \n",
-            "\u001b[?25hInstalling collected packages: pydicom\n",
-            "Successfully installed pydicom-2.3.0\n",
-            "Mounted at /content/drive\n"
+            "Requirement already satisfied: pydicom in /usr/local/lib/python3.7/dist-packages (2.3.0)\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -863,9 +857,9 @@
           "height": 143
         },
         "id": "bA2SAnXbYpcZ",
-        "outputId": "bd180f0e-05d9-46a9-8a1f-ac3004aef34d"
+        "outputId": "dfc34c4e-09c0-4143-e3ae-9c47d8157d5c"
       },
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,7 +872,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-356195ad-0e88-4254-a710-54ea79832357\">\n",
+              "  <div id=\"df-a0740c40-f6c5-42f8-a383-be8d97251914\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -925,7 +919,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-356195ad-0e88-4254-a710-54ea79832357')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a0740c40-f6c5-42f8-a383-be8d97251914')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -976,12 +970,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-356195ad-0e88-4254-a710-54ea79832357 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a0740c40-f6c5-42f8-a383-be8d97251914 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-356195ad-0e88-4254-a710-54ea79832357');\n",
+              "          const element = document.querySelector('#df-a0740c40-f6c5-42f8-a383-be8d97251914');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1004,7 +998,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 25
         }
       ]
     },
@@ -1027,7 +1021,7 @@
       "metadata": {
         "id": "5aNPFcbgSPoe"
       },
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1061,9 +1055,9 @@
           "height": 1000
         },
         "id": "3m5VWhNkSaxg",
-        "outputId": "f4bfaeba-3601-4d30-b873-03254a8b01c7"
+        "outputId": "8a47acca-eb8c-44fe-d78a-4797658fa3cc"
       },
-      "execution_count": 4,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,29 +1114,46 @@
     {
       "cell_type": "code",
       "source": [
+        "#Segmentation dataの閲覧例\n",
         "image_path = \"./segmentations/1.2.826.0.1.3680043.11988.nii\"\n",
         "nil_img = nib.load(image_path).get_fdata()\n",
-        "print(nil_img.shape)\n",
+        "print(nil_img.shape) #Z方向に217スライスある\n",
         "\n",
+        "rows = 8 #縦の行\n",
+        "cols = 8 #横の列\n",
+        "axes=[]\n",
+        "plt.figure(figsize=(cols*3, rows*3))\n",
         "\n",
-        "len(os.listdir(\"./train_images/1.2.826.0.1.3680043.11988\"))"
+        "for i in range(rows*cols):\n",
+        "    nib_image = nil_img[:,:,i]\n",
+        "    ax = plt.subplot(rows, cols, i+1)\n",
+        "    plt.imshow(nib_image)\n",
+        "    plt.axis('off')\n",
+        "    plt.imshow(nib_image)\n",
+        "\n",
+        "# --> Torch_IOを用いて多色で塗り分け、semantic segmentationを行う"
       ],
       "metadata": {
-        "id": "3pNzDGA7wBy7",
-        "outputId": "5eed1081-9bee-4bad-edf5-84c7a6c8cde2",
+        "id": "3pNzDGA7wBy7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ".data = [i for i in range(nil_img.shape[2])]\n",
+        "len(data)"
+      ],
+      "metadata": {
+        "id": "D1KlhIBAFkyr",
+        "outputId": "87d9739d-55ce-4503-bdfd-e21062013ab9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 65,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(512, 512, 217)\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1151,7 +1162,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 65
         }
       ]
     },
@@ -1168,11 +1179,11 @@
         "print(and_list)"
       ],
       "metadata": {
-        "id": "nswfIa-cqyEG",
-        "outputId": "877db228-0add-4174-d521-6963b836bdc8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nswfIa-cqyEG",
+        "outputId": "877db228-0add-4174-d521-6963b836bdc8"
       },
       "execution_count": 16,
       "outputs": [
