--- a/Bunkruptcy-prediction.ipynb
+++ b/Bunkruptcy-prediction.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**KaggleのデータセットをGoogle Driveにダウンロードする**"
+        "#**Download Kaggle dataset**"
       ],
       "metadata": {
         "id": "kX5jEqwlpfjN"
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ARmR6Kdbsayr",
-        "outputId": "5d987c2f-1239-487f-ace8-a63273c8e50b"
+        "outputId": "667ef5d3-6780-4ab1-e910-cc8186e30dbb"
       },
       "outputs": [
         {
@@ -63,13 +63,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yFYRlGskoctf",
-        "outputId": "927ee011-2d8b-420a-d908-d07685db7721"
+        "outputId": "14546658-62bc-4a3c-c605-f4abe725fe27"
       },
       "outputs": [
         {
@@ -78,27 +78,31 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (1.5.12)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.15.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle) (2022.6.15)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.24.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.23.0)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.8.2)\n",
             "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle) (6.1.2)\n",
+            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.15.0)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.23.0)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.24.3)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.8.2)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle) (2022.6.15)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from kaggle) (4.64.0)\n",
             "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.7/dist-packages (from python-slugify->kaggle) (1.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (2.10)\n",
             "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n",
             "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n",
-            "bankruptcy-risk-prediction.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
-            "Archive:  /content/bankruptcy-risk-prediction.zip\n",
-            "  inflating: /content/submission_example.csv  \n",
-            "  inflating: /content/test.csv       \n",
-            "  inflating: /content/train.csv      \n"
+            "Downloading bankruptcy-risk-prediction.zip to /content/input\n",
+            "  0% 0.00/22.3k [00:00<?, ?B/s]\n",
+            "100% 22.3k/22.3k [00:00<00:00, 30.8MB/s]\n",
+            "Archive:  /content/input/bankruptcy-risk-prediction.zip\n",
+            "  inflating: /content/input/submission_example.csv  \n",
+            "  inflating: /content/input/test.csv  \n",
+            "  inflating: /content/input/train.csv  \n"
           ]
         }
       ],
       "source": [
+        "import os\n",
+        "\n",
         "# kaggle ライブラリのインストール\n",
         "!pip install kaggle\n",
         "\n",
@@ -114,12 +118,15 @@
         "!mkdir ~/.kaggle\n",
         "\n",
         "# zipファイルのダウンロード\n",
-        "!kaggle competitions download -c bankruptcy-risk-prediction -p /content\n",
+        "!kaggle competitions download -c bankruptcy-risk-prediction -p /content/input\n",
         "# 解凍\n",
-        "!unzip /content/bankruptcy-risk-prediction.zip -d /content\n",
+        "!unzip /content/input/bankruptcy-risk-prediction.zip -d /content/input\n",
         "\n",
         "#Zipフォルダを削除\n",
-        "!rm /content/bankruptcy-risk-prediction.zip"
+        "!rm /content/input/bankruptcy-risk-prediction.zip\n",
+        "\n",
+        "os.makedirs(\"./output\", exist_ok=True)\n",
+        "\n"
       ]
     },
     {
@@ -146,7 +153,96 @@
         "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
-        "id": "38_M1rTNZJFj"
+        "id": "38_M1rTNZJFj",
+        "outputId": "1003c466-d50d-4140-d11d-3211a255251c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting optuna\n",
+            "  Downloading optuna-2.10.1-py3-none-any.whl (308 kB)\n",
+            "\u001b[K     |████████████████████████████████| 308 kB 4.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from optuna) (4.64.0)\n",
+            "Collecting alembic\n",
+            "  Downloading alembic-1.8.1-py3-none-any.whl (209 kB)\n",
+            "\u001b[K     |████████████████████████████████| 209 kB 49.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy!=1.4.0 in /usr/local/lib/python3.7/dist-packages (from optuna) (1.7.3)\n",
+            "Requirement already satisfied: sqlalchemy>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from optuna) (1.4.40)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from optuna) (21.3)\n",
+            "Collecting cliff\n",
+            "  Downloading cliff-3.10.1-py3-none-any.whl (81 kB)\n",
+            "\u001b[K     |████████████████████████████████| 81 kB 8.8 MB/s \n",
+            "\u001b[?25hCollecting colorlog\n",
+            "  Downloading colorlog-6.6.0-py2.py3-none-any.whl (11 kB)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from optuna) (6.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from optuna) (1.21.6)\n",
+            "Collecting cmaes>=0.8.2\n",
+            "  Downloading cmaes-0.8.2-py3-none-any.whl (15 kB)\n",
+            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=20.0->optuna) (3.0.9)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from sqlalchemy>=1.1.0->optuna) (4.12.0)\n",
+            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.7/dist-packages (from sqlalchemy>=1.1.0->optuna) (1.1.2)\n",
+            "Requirement already satisfied: importlib-resources in /usr/local/lib/python3.7/dist-packages (from alembic->optuna) (5.9.0)\n",
+            "Collecting Mako\n",
+            "  Downloading Mako-1.2.1-py3-none-any.whl (78 kB)\n",
+            "\u001b[K     |████████████████████████████████| 78 kB 7.5 MB/s \n",
+            "\u001b[?25hCollecting stevedore>=2.0.1\n",
+            "  Downloading stevedore-3.5.0-py3-none-any.whl (49 kB)\n",
+            "\u001b[K     |████████████████████████████████| 49 kB 6.0 MB/s \n",
+            "\u001b[?25hCollecting pbr!=2.1.0,>=2.0.0\n",
+            "  Downloading pbr-5.10.0-py2.py3-none-any.whl (112 kB)\n",
+            "\u001b[K     |████████████████████████████████| 112 kB 26.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: PrettyTable>=0.7.2 in /usr/local/lib/python3.7/dist-packages (from cliff->optuna) (3.3.0)\n",
+            "Collecting cmd2>=1.0.0\n",
+            "  Downloading cmd2-2.4.2-py3-none-any.whl (147 kB)\n",
+            "\u001b[K     |████████████████████████████████| 147 kB 35.3 MB/s \n",
+            "\u001b[?25hCollecting autopage>=0.4.0\n",
+            "  Downloading autopage-0.5.1-py3-none-any.whl (29 kB)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from cmd2>=1.0.0->cliff->optuna) (4.1.1)\n",
+            "Collecting pyperclip>=1.6\n",
+            "  Downloading pyperclip-1.8.2.tar.gz (20 kB)\n",
+            "Requirement already satisfied: wcwidth>=0.1.7 in /usr/local/lib/python3.7/dist-packages (from cmd2>=1.0.0->cliff->optuna) (0.2.5)\n",
+            "Requirement already satisfied: attrs>=16.3.0 in /usr/local/lib/python3.7/dist-packages (from cmd2>=1.0.0->cliff->optuna) (22.1.0)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->sqlalchemy>=1.1.0->optuna) (3.8.1)\n",
+            "Requirement already satisfied: MarkupSafe>=0.9.2 in /usr/local/lib/python3.7/dist-packages (from Mako->alembic->optuna) (2.0.1)\n",
+            "Building wheels for collected packages: pyperclip\n",
+            "  Building wheel for pyperclip (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyperclip: filename=pyperclip-1.8.2-py3-none-any.whl size=11137 sha256=aa97997187473a5afbde747b16c8c10424e576047cd0bcec07e7b1f5837814ea\n",
+            "  Stored in directory: /root/.cache/pip/wheels/9f/18/84/8f69f8b08169c7bae2dde6bd7daf0c19fca8c8e500ee620a28\n",
+            "Successfully built pyperclip\n",
+            "Installing collected packages: pyperclip, pbr, stevedore, Mako, cmd2, autopage, colorlog, cmaes, cliff, alembic, optuna\n",
+            "Successfully installed Mako-1.2.1 alembic-1.8.1 autopage-0.5.1 cliff-3.10.1 cmaes-0.8.2 cmd2-2.4.2 colorlog-6.6.0 optuna-2.10.1 pbr-5.10.0 pyperclip-1.8.2 stevedore-3.5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load train.csv\n",
+        "train_df = pd.read_csv('../input/bankruptcy-risk-prediction/train.csv')\n",
+        "\n",
+        "# load test.csv\n",
+        "test_df = pd.read_csv('../input/bankruptcy-risk-prediction/test.csv')\n",
+        "\n",
+        "# load submission_example.csv\n",
+        "submission = pd.read_csv('../input/bankruptcy-risk-prediction/submission_example.csv')\n",
+        "\n",
+        "\n",
+        "print(f'train_df.shape = {train_df.shape}')\n",
+        "print(f'test_df.shape = {test_df.shape}')\n",
+        "print(f'submission.shape = {submission.shape}')\n",
+        "\n",
+        "train_df"
+      ],
+      "metadata": {
+        "id": "SlZy1X0WZf4F"
       },
       "execution_count": null,
       "outputs": []
